2003-05-21  Andrey Kiselev  <dron@remotesensing.org>
	
	* frmts/hdf4/{hdf4dataset.h, hdf4dataset.cpp, hdf4imagedataset.cpp}:
	MODIS Level 1B earth-view (EV) product now supported, including
	geolocation points extraction.

2003-05-05  Simon Perkins  <s.perkins@lanl.gov>

	* core/gdalrasterband.cpp: Added C++ Fill() method and
	corresponding C GDALFillRaster() method.

	* frmts/fits/fitsdataset.cpp: Removed dodgy "value type guessing"
	code from FITS metadata write routine.

2003-04-24  Frank Warmerdam  <warmerdam@pobox.com>

	* port/cpl_multiproc.cpp: Implement pthreads based mutex, and thread
	support.  Added configure option (--with-threads) in configure.

2003-04-22  Andrey Kiselev  <dron@remotesensing.org>
	
	* apps/gdalinfo.c: New switches: -nogcp and -nomd to suppress
	printing out GCPs list and metadata strings respectively.

2003-03-18  Frank Warmerdam  <warmerdam@pobox.com>

	* gdal/frmts/raw/rawdataset: Implemented FlushCache() method on 
	the RawRasterBand() that will use VSIFFlush() to sync things to disk.

	* gdal/core/gdal_priv.h: made GDALRasterBand::FlushCache() method
	virtual.  Added C/Python access to GDALDataset::FlushCache(). 

2003-03-05  Frank Warmerdam  <warmerdam@pobox.com>

	* ogr/swq, etc: Implemented JOIN support in the generic ExecuteSQL()
	processor. 

	* ogr/ogrsf_frmts/generic/ogr_miattrindc.cpp: 
	Implemented support for generic ogr attribute indexes and the ability
	to accelerate simple WHERE clauses using the attribute index.  Applied
	only to Shape driver so far. 

2003-02-26  Frank Warmerdam  <warmerdam@pobox.com>

	* configure/aclocal.m4: added --without-ld-shared configure switch
	to disable shared library support. 

2003-02-21  Andrey Kiselev  <dron@remotesensing.org>
	
	* /gdal/frmts/hfa/{hfaopen.cpp, hfatype.cpp, hfaband.cpp, hfa_p.h}:
	Added support for writing large (>4 GB) Erdas Imagine files.

2003-02-19  Andrey Kiselev  <dron@remotesensing.org>
	
	* /gdal/frmts/raw/effdataset.cpp: Removed. FAST driver now should work