@@ -1,3 +1,8 @@
+2003-05-23  Simon Perkins  <s.perkins@lanl.gov>
+
+	* core/gdaldataset.cpp: The default CreateCopy() implementation
+	now copies metadata from source to target.
+
 2003-05-21  Andrey Kiselev  <dron@remotesensing.org>
 	
 	* frmts/hdf4/{hdf4dataset.h, hdf4dataset.cpp, hdf4imagedataset.cpp}:
